@@ -23,6 +23,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - Fixed a typo in Utils.py that could have resulted in a NameError in
+      logging an unlikely occurrence.  (LP: #1637745)
+
     - Fixed a bug which created incorrect "view more members" links at the
       bottom of the admin Membership List pages.  (LP: #1637061)
 
